tests/baselines/reference/quickIntersectionCheckCorrectlyCachesErrors.errors.txt
quickIntersectionCheckCorrectlyCachesErrors.tsx(10,21): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.


==== quickIntersectionCheckCorrectlyCachesErrors.tsx (1 errors) ====
    interface F<P> {
        (props: P & { children?: boolean }): void;
        propTypes: { [K in keyof P]: null extends P ? K : K };
    }
    declare function g(C: F<unknown>): string;
    export function wu<CP extends { o: object }>(CC: F<CP>) {
        class WU {
            m() {
                g(CC)
                return <CC {...(null as unknown as CP)} />;
                        ~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
            }
        }
    }
    